--- a/apmanager/templates/base.html
+++ b/apmanager/templates/base.html
@@ -1,12 +1,13 @@
+{% load admin_list %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 {% block meta %} {% endblock %}
     <title>Gestion des points d'acc&egrave;s</title>
-    <!--<link rel="SHORTCUT ICON" href="/rapports/site-media/favicon.ico">-->
+    <link rel="SHORTCUT ICON" href="{{MEDIA_URL}}favicon.ico">
 {% block feuillestyle %}
-    <link rel="StyleSheet" href="/site-media/default.css" type="text/css" media="screen">
+    <link rel="StyleSheet" href="{{MEDIA_URL}}default.css" type="text/css" media="screen">
 {% endblock %}
 {% block head %} {% endblock %}
 </head>
@@ -16,7 +17,7 @@
 
 {% if not user.is_anonymous %}
 {% block body %}{% endblock %}
-{% block admin %}<a href='{% url django.contrib.admin.views.main.index %}'>Interface d'administration</a><br />{% endblock %}
+{% block admin %}<a href='{% url admin:index %}'>Interface d'administration</a><br />{% endblock %}
 {% endif %}
 
 {% block body_public %}{% endblock %}
