--- a/apmanager/templates/accesspoints/ap/links.html
+++ b/apmanager/templates/accesspoints/ap/links.html
@@ -1,3 +1,4 @@
-<a href='{% url apmanager.accesspoints.views.ap.view_ap_list %}'>Liste des points d'acc&egrave;s</a>&nbsp;
-<a href='{% url apmanager.accesspoints.views.ap.view_nagios_config %}'>Config Nagios</a><br />
-<a href='{% url apmanager.accesspoints.views.ap.view_client_list %}'>Liste des clients</a><br />
+{% load i18n %}
+<a href='{% url apmanager.accesspoints.views.ap.view_ap_list %}'>{% trans "Access Point List" %}</a>&nbsp;
+<a href='{% url apmanager.accesspoints.views.ap.view_nagios_config %}'>{% trans "Nagios Configuration" %}</a><br />
+<a href='{% url apmanager.accesspoints.views.ap.view_client_list %}'>{% trans "Client List" %}</a><br />
