--- a/apmanager/templates/genericsql/links.html
+++ b/apmanager/templates/genericsql/links.html
@@ -1,1 +1,2 @@
-<a href='{% url apmanager.genericsql.views.display_report_list %}'>Rapports</a><br />
+{% load i18n %}
+<a href='{% url apmanager.genericsql.views.display_report_list %}'>{% trans "Reports" %}</a><br />
