--- a/apmanager/templates/registration/login.html
+++ b/apmanager/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block feuillestyle %}
     {{ super.block }}
     <script language="javascript">
@@ -12,15 +12,15 @@
 <br/><br/><br/>
 
 {% if form.has_errors %}
-<p>Your username and/or password didn't match. Please try again.</p>
+<p>{% trans "Your username and/or password didn't match. Please try again." %}</p>
 {% endif %}
 
 
 <form class="form" method="post" action=".">
 <table>
-    <tr><td><label for="id_username">Usager :</label></td><td>{{ form.username }}</td></tr>
-    <tr><td><label for="id_password">Mot de passe :</label></td><td>{{ form.password }}</td></tr>
-    <tr><td></td><td align="right"><input type="submit" value="Login"><input type="hidden" name="next" value="{{ next }}"></td></tr>
+    <tr><td><label for="id_username">{% trans "Username:" %}</label></td><td>{{ form.username }}</td></tr>
+    <tr><td><label for="id_password">{% trans "Password:" %}</label></td><td>{{ form.password }}</td></tr>
+    <tr><td></td><td align="right"><input type="submit" name="login_btn" value="{% trans "Login" %}"><input type="hidden" name="next" value="{{ next }}"></td></tr>
 </table>
 </form>
 
