--- a/apmanager/templates/accesspoints/groups/links.html
+++ b/apmanager/templates/accesspoints/groups/links.html
@@ -1,1 +1,2 @@
-<a href='{% url apmanager.accesspoints.views.apgroup.view_group_list %}'>Liste des groupes</a><br />
+{% load i18n %}
+<a href='{% url apmanager.accesspoints.views.apgroup.view_group_list %}'>{% trans "Groups List" %}</a><br />
