--- a/apmanager/templates/accesspoints/list.html
+++ b/apmanager/templates/accesspoints/list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block head %} {% endblock %}
 {% block bodytags %}{% endblock %}
@@ -18,11 +19,11 @@
 </table>
 {% if add_refresh_button %}
     <br><form method="POST">
-        <input type="submit" value="Actualiser"/>
+        <input type="submit" name="refresh_btn" value="{% trans "Refresh" %}"/>
     </form>
 {% endif %}
 <br /><hr /><br />
-<span>Liens utiles</span><br />
+<span>{% trans "Useful Links" %}</span><br />
 {% include "accesspoints/ap/links.html" %}
 {% include "accesspoints/groups/links.html" %}
 {% include "accesspoints/commands/links.html" %}
