--- a/apmanager/templates/base.html
+++ b/apmanager/templates/base.html
@@ -1,10 +1,11 @@
 {% load admin_list %}
+{% load i18n %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 {% block meta %} {% endblock %}
-    <title>Gestion des points d'acc&egrave;s</title>
+    <title>{% trans "Access Point Management" %}</title>
     <link rel="SHORTCUT ICON" href="{{MEDIA_URL}}favicon.ico">
 {% block feuillestyle %}
     <link rel="StyleSheet" href="{{MEDIA_URL}}default.css" type="text/css" media="screen">
@@ -17,7 +18,7 @@
 
 {% if not user.is_anonymous %}
 {% block body %}{% endblock %}
-{% block admin %}<a href='{% url admin:index %}'>Interface d'administration</a><br />{% endblock %}
+{% block admin %}<a href='{% url admin:index %}'>{% trans "Admin Interface" %}</a><br />{% endblock %}
 {% endif %}
 
 {% block body_public %}{% endblock %}
