--- a/apmanager/templates/genericsql/report_data.table.inner.html
+++ b/apmanager/templates/genericsql/report_data.table.inner.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!--
 {{ report.sql }}
 -->
@@ -20,5 +21,5 @@
 </tr>
 {% endif %}
 {% else %}
-<tr><td>Aucun r&eacute;sultat &agrave; afficher.</td></tr>
+<tr><td>{% trans "No results to display" %}</td></tr>
 {% endif %}
