--- a/apmanager/templates/genericsql/report_error.html
+++ b/apmanager/templates/genericsql/report_error.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block feuillestyle %}{% endblock %}
 {% block menu %}{% endblock %}
 
-{% block body %}<h3>Erreur de programmation</h3><p>Cette erreur peut provenir d'une requ&ecirc;te SQL mal form&eacute;e ou de param&egrave;tres incorrects</p><p>{{ exception }}</p><br>{% endblock %}
+{% block body %}<h3>{% trans "Programming Error" %}</h3><p>{% trans "This error might have been caused by a malformed SQL query or bad parameters" %}</p><p>{{ exception }}</p><br>{% endblock %}
 
 {% block body_public %}{% endblock %}
