--- a/apmanager/templates/registration/logged_out.html
+++ b/apmanager/templates/registration/logged_out.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block body_public %}
-<a href="/">Retour</a>
+<a href="/">{% trans "Back" %}</a>
 {% endblock %}
 ~
 
