--- a/apmanager/templates/accesspoints/groups/links.html
+++ b/apmanager/templates/accesspoints/groups/links.html
@@ -1,2 +1,2 @@
 {% load i18n %}
-<a href='{% url apmanager.accesspoints.views.apgroup.view_group_list %}'>{% trans "Groups List" %}</a><br />
+<li><a href='{% url apmanager.accesspoints.views.apgroup.view_group_list %}'>{% trans "Groups List" %}</a></li>
