--- a/apmanager/templates/genericsql/links.html
+++ b/apmanager/templates/genericsql/links.html
@@ -1,2 +1,2 @@
 {% load i18n %}
-<a href='{% url apmanager.genericsql.views.display_report_list %}'>{% trans "Reports" %}</a><br />
+<li><a href='{% url apmanager.genericsql.views.display_report_list %}'>{% trans "Reports" %}</a></li>
