--- a/apmanager/templates/accesspoints/ap.html
+++ b/apmanager/templates/accesspoints/ap.html
@@ -5,8 +5,6 @@
 {% endblock %}{% endcomment %}
 {% block head %} {% endblock %}
 {% block bodytags %}{% endblock %}
-{% block menu %}
-{% endblock %}
 {% block body %}
 <h2>{{ ap.name }}</h2>
 <table>
@@ -15,8 +13,9 @@
 <tr><th>{% trans "Description" %}</th><td>{{ ap.description }}</td></tr>
 <tr><th>{% trans "Architecture" %}</th><td>{{ ap.architecture }}</td></tr>
 </table>
-<a href='{% url apmanager.accesspoints.views.ap.view_ap_nagios_config ap.id %}'>Configuration Nagios</a>
 <br /><hr /><br />
+<a href='{% url apmanager.accesspoints.views.ap.view_ap_nagios_config ap.id %}'>Configuration Nagios</a>
+{% comment %}
 <h3>{% trans "Clients" %}</h3>
 <table>
 <thead><tr><th>MAC</th><th>IP</th></tr></thead>
@@ -31,11 +30,9 @@
         <input type="submit" name="refresh_btn" value="{% trans "Refresh" %}"/>
     </form>
 
+{% endcomment %}
 <br />
 <hr />
-{% include "accesspoints/ap/links.html" %}
-{% include "accesspoints/groups/links.html" %}
-{% include "accesspoints/commands/links.html" %}
 {% endblock %}
 
 
