--- a/apmanager/templates/accesspoints/commands/create.html
+++ b/apmanager/templates/accesspoints/commands/create.html
@@ -8,7 +8,7 @@
 {% block menu %}
 {% endblock %}
 {% block body %}
-<h2>{% trans "Create a Command" %}</h2>
+<h2>{% trans "Run a Command" %}</h2>
 
 <form method="post">
 <table>
@@ -33,9 +33,6 @@
 <input type="submit" />
 </form>
 
-{% include "accesspoints/ap/links.html" %}
-{% include "accesspoints/groups/links.html" %}
-{% include "accesspoints/commands/links.html" %}
 {% endblock %}
 {% block body_public %}{% endblock %}
 
