--- a/apmanager/templates/accesspoints/ap/links.html
+++ b/apmanager/templates/accesspoints/ap/links.html
@@ -1,4 +1,8 @@
 {% load i18n %}
-<li><a href='{% url apmanager.accesspoints.views.ap.view_ap_list %}'>{% trans "Access Point List" %}</a><ul>
-<li><a href='{% url apmanager.accesspoints.views.ap.view_nagios_config %}'>{% trans "Nagios Configuration" %}</a></li></ul>
+<li>
+    <a href='{% url apmanager.accesspoints.views.ap.view_ap_list %}'>{% trans "Access Point List" %}</a>
+    <ul>
+        <li><a href='{% url apmanager.accesspoints.views.ap.ap_init_overview %}'>{% trans "Initialization Overview" %}</a></li>
+        <li><a href='{% url apmanager.accesspoints.views.ap.view_nagios_config %}'>{% trans "Nagios Configuration" %}</a></li>
+    </ul>
 </li>
