--- a/apmanager/templates/accesspoints/commands/create.html
+++ b/apmanager/templates/accesspoints/commands/create.html
@@ -12,18 +12,29 @@
 
 <form method="post">
 <table>
-		<tr><th><label for="group_id">{% trans "Group" %}</label></th><td><select name="group_id">
-        <option value="">{% trans "Select a Group" %}</option>
-		{% for group in group_list %}
-		<option value="{{group.id}}" {% ifequal group.id data.group_id  %}selected="true"{% endifequal %}>{{group.name}}</option>
-		{% endfor %}
-		</select></td></tr>
-		<tr><th><label for="ap_id">{% trans "Access Point" %}</label></th><td><select name="ap_id">
-        <option value="">{% trans "Select an AP" %}</option>
-		{% for ap in ap_list %}
-		<option value="{{ap.id}}" {% ifequal ap.id data.ap_id  %}selected="true"{% endifequal %}>{{ap.name}}</option>
-		{% endfor %}
-		</select></td></tr>
+        <tr>
+            <th>{% trans "Target:" %}</th>
+		{# <th><label for="group_id">{% trans "Group" %}</label></th> #}
+            <td><select name="group_id">
+                <option value="">{% trans "Select a Group" %}</option>
+                {% for group in group_list %}
+                <option value="{{group.id}}" {% ifequal group.id data.group_id  %}selected="true"{% endifequal %}>{{group.name}}</option>
+                {% endfor %}
+                </select>
+            {# </td> #}
+        {# </tr> #}
+        {% trans "or" %}
+		{# <tr> #}
+           {# <th><label for="ap_id">{% trans "Access Point" %}</label></th> #}
+           {# <td> #}
+           <select name="ap_id">
+                <option value="">{% trans "Select an AP" %}</option>
+                {% for ap in ap_list %}
+                <option value="{{ap.id}}" {% ifequal ap.id data.ap_id  %}selected="true"{% endifequal %}>{{ap.name}}</option>
+                {% endfor %}
+                </select>
+            </td>
+        </tr>
 <tr><th><label for="command_id">{% trans "Command" %}</label></th><td><select name="command_id">
 		{% for cmd in cmd_list %}
 		<option value="{{cmd.id}}" {% ifequal cmd.id cmd.ap_id %}selected="true"{% endifequal %}>{{cmd.name}}</option>
