--- a/apmanager/templates/accesspoints/ap.html
+++ b/apmanager/templates/accesspoints/ap.html
@@ -15,6 +15,7 @@
 </table>
 {% if init_status %}
 <h3>{% trans "Initialization Status" %}</h3>
+<form method="POST"><button name="init" value="1">{% trans "Run initialization" %}</button></form>
 {# Missing #}
 {% if init_status.missing %}
     <h4>{%blocktrans with init_status.missing|length as count %}{{ count }} section(s) missing{% endblocktrans %}</h4>
